python/tests/gold/gzipminimumconfigtest/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "gzipminimumconfigtest.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ],
        "gzipminimumconfigtest.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "gzipminimumconfigtest.default.1": {
            "_referenced_by": {},
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v0",
            "config": {
                "gzip": {
                    "enabled": true
                }
            },
            "kind": "Module",
            "location": "gzipminimumconfigtest.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "rkey": "gzipminimumconfigtest.default.1",
            "serialization": "ambassador_id: gzipminimumconfigtest\napiVersion: ambassador/v0\nconfig:\n  gzip:\n    enabled: true\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: gzipminimumconfigtest\n  scope: AmbassadorTest\nname: ambassador\n"
        },
        "gzipminimumconfigtest.default.2": {
            "_referenced_by": {},
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "gzipminimumconfigtest.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "gzipminimumconfigtest-http",
            "namespace": "default",
            "prefix": "/target/",
            "rkey": "gzipminimumconfigtest.default.2",
            "serialization": "ambassador_id: gzipminimumconfigtest\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: gzipminimumconfigtest\n  scope: AmbassadorTest\nname: gzipminimumconfigtest-http\nprefix: /target/\nservice: gzipminimumconfigtest-http\n",
            "service": "gzipminimumconfigtest-http"
        },
        "k8s-gzipminimumconfigtest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-gzipminimumconfigtest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest",
                "service": "gzipminimumconfigtest-admin"
            },
            "name": "gzipminimumconfigtest-admin",
            "namespace": "default",
            "rkey": "k8s-gzipminimumconfigtest-admin-default",
            "serialization": "ambassador_id: gzipminimumconfigtest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: gzipminimumconfigtest\n  scope: AmbassadorTest\n  service: gzipminimumconfigtest-admin\nname: gzipminimumconfigtest-admin\nnamespace: default\n"
        },
        "k8s-gzipminimumconfigtest-default": {
            "_referenced_by": {},
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-gzipminimumconfigtest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "gzipminimumconfigtest",
            "namespace": "default",
            "rkey": "k8s-gzipminimumconfigtest-default",
            "serialization": "ambassador_id: gzipminimumconfigtest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: gzipminimumconfigtest\n  scope: AmbassadorTest\nname: gzipminimumconfigtest\nnamespace: default\n"
        },
        "k8s-gzipminimumconfigtest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-gzipminimumconfigtest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "gzipminimumconfigtest-http",
            "namespace": "default",
            "rkey": "k8s-gzipminimumconfigtest-http-default",
            "serialization": "ambassador_id: gzipminimumconfigtest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: gzipminimumconfigtest\n  scope: AmbassadorTest\nname: gzipminimumconfigtest-http\nnamespace: default\n"
        }
    },
    "mappings": {
        "gzipminimumconfigtest-http": {
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "gzipminimumconfigtest-http",
            "namespace": "default",
            "prefix": "/target/",
            "service": "gzipminimumconfigtest-http"
        }
    },
    "modules": {
        "ambassador": {
            "apiVersion": "getambassador.io/v0",
            "gzip": {
                "enabled": true
            },
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default"
        }
    },
    "service": {
        "k8s-gzipminimumconfigtest-admin-default": {
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest",
                "service": "gzipminimumconfigtest-admin"
            },
            "name": "gzipminimumconfigtest-admin",
            "namespace": "default"
        },
        "k8s-gzipminimumconfigtest-default": {
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "gzipminimumconfigtest",
            "namespace": "default"
        },
        "k8s-gzipminimumconfigtest-http-default": {
            "ambassador_id": "gzipminimumconfigtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "gzipminimumconfigtest",
                "scope": "AmbassadorTest"
            },
            "name": "gzipminimumconfigtest-http",
            "namespace": "default"
        }
    }
}
