python/tests/gold/gzipminimumconfigtest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"gzipminimumconfigtest\",\"scope\":\"AmbassadorTest\",\"service\":\"gzipminimumconfigtest-admin\"},\"name\":\"gzipminimumconfigtest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"gzipminimumconfigtest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"gzipminimumconfig [...]
                    },
                    "creationTimestamp": "2020-01-09T12:54:59Z",
                    "labels": {
                        "kat-ambassador-id": "gzipminimumconfigtest",
                        "scope": "AmbassadorTest",
                        "service": "gzipminimumconfigtest-admin"
                    },
                    "name": "gzipminimumconfigtest-admin",
                    "namespace": "default",
                    "resourceVersion": "14122",
                    "selfLink": "/api/v1/namespaces/default/services/gzipminimumconfigtest-admin",
                    "uid": "3e3ff74f-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.104.211.164",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "gzipminimumconfigtest-admin",
                            "nodePort": 30086,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "gzipminimumconfigtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"gzipminimumconfigtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"gzipminimumconfigtest-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8095},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8458}],\"selector\":{\"bac [...]
                    },
                    "creationTimestamp": "2020-01-09T12:54:59Z",
                    "labels": {
                        "kat-ambassador-id": "gzipminimumconfigtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "gzipminimumconfigtest-http",
                    "namespace": "default",
                    "resourceVersion": "14129",
                    "selfLink": "/api/v1/namespaces/default/services/gzipminimumconfigtest-http",
                    "uid": "3e5cb328-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.100.167.15",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8095
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8458
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: ambassador\nconfig:\n  gzip:\n    enabled: true\nambassador_id: gzipminimumconfigtest\n\n---\napiVersion: ambassador/v0\nkind: Mapping\nname: gzipminimumconfigtest-http\nprefix: /target/\nservice: gzipminimumconfigtest-http\nambassador_id: gzipminimumconfigtest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: ambassador\\nconfig:\\n  gzip:\\n    enabled: true\\nambassador_id: gzipminimumconfigtest\\n\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: gzipminimumconfigtest-http\\nprefix: /target/\\nservice: gzipminimumconfigtest-http\\nambassador_id: gzipminimum [...]
                    },
                    "creationTimestamp": "2020-01-09T12:54:59Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "gzipminimumconfigtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "gzipminimumconfigtest",
                    "namespace": "default",
                    "resourceVersion": "14117",
                    "selfLink": "/api/v1/namespaces/default/services/gzipminimumconfigtest",
                    "uid": "3e36a3c1-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.100.172.60",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30079,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30149,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "gzipminimumconfigtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
